--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ pydantic = "^1.10.8"
 pytz = "^2023.3"
 selenium = "^4.9.1"
 pyyaml = "^6.0"
+openai = "^0.27.8"
+pymilvus = "2.2"
 
 
 [build-system]
